[package]
name = "isuconf"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = "1.0"
serde_yaml = "0.9"
serde_derive = "1.0"
anyhow = "1.0"
structopt = "0.3"
chrono = "0.4"
futures = "0.3"
itertools = "0.11.0"
tokio = { version = "1", features = ["full"] }
openssh = "0.10"
openssh-sftp-client = "0.14"
async-recursion = "1.0.4"
colored = "2"
parse-size = "1"